--- a/neww/style.css
+++ b/neww/style.css
@@ -1,9 +1,60 @@
 .content{
     background-color: #FFF5E0;
-    height:712px;
-    margin: 50px 200px ;
+    height:400px;
+    margin: 0px 200px ;
     width: 1185px;
     padding: 20px 20px 250px 20px;
+    
+}
+.h_container{
+    background-color: black;
+    width: 100%;
+    height: 80px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: .7;
+
+
+}
+body{
+    background-color: #640909;
+    margin: 0;
+}
+.header-title{
+    text-align: center;
+  
+}
+.sidebar-container{
+    display: flex;
+    justify-self: end;
+    width: 15%;
+    
+}
+.sidebar-text{
+    text-align: center;
+    padding-right: 60px;
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    margin-top: 20px;
+}
+.navbar-text{
+    position: absolute;
+    color: white;
+    font-size: 40px;
+    margin-top: 20px;
+}
+.footer-title{
+    background-color: black;
+    width: 100%;
+    height: 80px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: .7;
 }
 .article{
     
@@ -18,6 +69,7 @@ width: 567px;
 height: 50px;
 margin:20px 10px;
 text-align: center;
+place-content: center;
 
 
 }
@@ -35,6 +87,7 @@ text-align: center;
     width: 372px;
     height: 56px;
     text-align: center;
+    place-content: center;
    margin:25px 10px;
 
    
